@@ -231,7 +231,7 @@
                        (t (dotimes (i (length invalid))
                             (vector-push-extend (char invalid i) string))))
                      (incf pos bytes)))
-          string))
+          (copy-seq string)))
       (defun ,name-be (array astart aend replacement)
         (declare (optimize speed #.*safety-0*)
                  (type ,type array)
@@ -251,7 +251,7 @@
                        (t (dotimes (i (length invalid))
                             (vector-push-extend (char invalid i) string))))
                      (incf pos bytes)))
-          string)))))
+          (copy-seq string))))))
 
 (instantiate-octets-definition define-utf-16->string)
 
@@ -479,7 +479,7 @@
                          (string (dotimes (i (length thing))
                                    (vector-push-extend (char thing i) string)))))
                      (incf pos bytes)))
-          string))
+          (copy-seq string)))
       (defun ,name-be (array astart aend replacement)
         (declare (optimize speed #.*safety-0*)
                  (type ,type array)
@@ -501,7 +501,7 @@
                          (string (dotimes (i (length thing))
                                    (vector-push-extend (char thing i) string)))))
                      (incf pos bytes)))
-          string)))))
+          (copy-seq string))))))
 
 (instantiate-octets-definition define-utf-32->string)
 
