@@ -40,6 +40,9 @@ changes in the external-format-line-endings branch:
   * bug fix: converting from octets using the UCS-2, UCS-4 and UTF-32 external
     formats no longer reads past the end of an octet array with a non-integral
     number of two- or four-byte units.
+  * bug fix: converting from octets using the UCS-2, UCS-4, UTF-16 or UTF-32
+    external formats now returns a simple string, as required by the type
+    declaration of OCTETS-TO-STRING.
   * bug fix: providing an invalid external format argument to OPEN or
     WITH-OPEN-FILE (or the internal MAKE-FD-STREAM) no longer leaks a file
     descriptor.
